--- a/Visualization-Maps.ipynb
+++ b/Visualization-Maps.ipynb
@@ -22,9 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sqlite3 as sqlite\n",
@@ -32,7 +40,8 @@
     "                       \"Misc\")\n",
     "print(os.path.exists(DATADIR))\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import folium"
    ]
   },
   {
@@ -43,6 +52,33 @@
    "source": [
     "from bokeh.io import output_notebook"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.5/site-packages/IPython/core/interactiveshell.py:2785: DtypeWarning: Columns (31) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = pd.read_csv(os.path.join(DATADIR,\n",
+    "                               \"Accidents7904.csv\"),\n",
+    "                  skiprows = lambda index: index > 0 and index <= 4883216)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -69,23 +105,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Number_of_Casualties</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.271752</td>\n",
+       "      <td>51.715661</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25/12/1999</td>\n",
+       "      <td>09:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.239977</td>\n",
+       "      <td>51.695136</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17/12/1999</td>\n",
+       "      <td>18:38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.270037</td>\n",
+       "      <td>51.715096</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15/12/1999</td>\n",
+       "      <td>18:04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.263233</td>\n",
+       "      <td>51.711309</td>\n",
+       "      <td>1</td>\n",
+       "      <td>02/12/1999</td>\n",
+       "      <td>04:10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.227225</td>\n",
+       "      <td>51.688200</td>\n",
+       "      <td>3</td>\n",
+       "      <td>04/12/1999</td>\n",
+       "      <td>09:51</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Longitude   Latitude  Number_of_Casualties        Date   Time\n",
+       "0  -0.271752  51.715661                     1  25/12/1999  09:30\n",
+       "1  -0.239977  51.695136                     1  17/12/1999  18:38\n",
+       "2  -0.270037  51.715096                     2  15/12/1999  18:04\n",
+       "3  -0.263233  51.711309                     1  02/12/1999  04:10\n",
+       "4  -0.227225  51.688200                     3  04/12/1999  09:51"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = pd.read_csv(os.path.join(DATADIR,\n",
     "                         \"Accidents7904.csv\"),\n",
-    "                   usecols = ['Longitude',\"Latitude\",\"Date\"]).dropna()\n",
+    "                   usecols = ['Longitude',\"Latitude\",\"Date\",\"Time\",\"Number_of_Casualties\"],\n",
+    "                  skiprows = lambda index: index > 0 and index <= 4883216)\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Longitude               float64\n",
+       "Latitude                float64\n",
+       "Number_of_Casualties      int64\n",
+       "Date                     object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Number_of_Casualties</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.271752</td>\n",
+       "      <td>51.715661</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25/12/1999</td>\n",
+       "      <td>09:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.239977</td>\n",
+       "      <td>51.695136</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17/12/1999</td>\n",
+       "      <td>18:38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.270037</td>\n",
+       "      <td>51.715096</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15/12/1999</td>\n",
+       "      <td>18:04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.263233</td>\n",
+       "      <td>51.711309</td>\n",
+       "      <td>1</td>\n",
+       "      <td>02/12/1999</td>\n",
+       "      <td>04:10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.227225</td>\n",
+       "      <td>51.688200</td>\n",
+       "      <td>3</td>\n",
+       "      <td>04/12/1999</td>\n",
+       "      <td>09:51</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Longitude   Latitude  Number_of_Casualties        Date   Time\n",
+       "0  -0.271752  51.715661                     1  25/12/1999  09:30\n",
+       "1  -0.239977  51.695136                     1  17/12/1999  18:38\n",
+       "2  -0.270037  51.715096                     2  15/12/1999  18:04\n",
+       "3  -0.263233  51.711309                     1  02/12/1999  04:10\n",
+       "4  -0.227225  51.688200                     3  04/12/1999  09:51"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data2 = data.dropna()\n",
+    "data2.head()"
    ]
   },
   {
@@ -93,6 +329,60 @@
    "metadata": {},
    "source": [
     "####  We can use the [``sample``](http://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.sample.html) method to get a subset of DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "09:30:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "tmp = datetime.strptime(\"09:30\", \"%H:%M\")\n",
+    "print(tmp.time())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.5/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "data2[\"Time\"] = data2.apply(lambda row: datetime.strptime(row[\"Time\"],\"%H:%M\").time(),\n",
+    "                                                         axis=1)"
    ]
   },
   {
@@ -105,6 +395,13 @@
     "mean_long = np.mean(subdata['Longitude'])\n",
     "mean_lat  = np.mean(subdata['Latitude'])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -172,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
