--- a/PythonBasicNumericTypes.ipynb
+++ b/PythonBasicNumericTypes.ipynb
@@ -126,9 +126,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "maximum float 1.7976931348623157e+308\n",
+      "minimum float 2.2250738585072014e-308\n",
+      "epislon 2.220446049250313e-16\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "print(\"maximum float\",sys.float_info.max)\n",
@@ -363,10 +373,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from quizzes.numeric_quizzes import *"
+   ]
   },
   {
    "cell_type": "code",
@@ -374,7 +386,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "numeric_quizz1(replace_me_with_the_numeric_answer)"
+    "(5 * 3** - 2)**2/(4*3 +1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'You got the correct answer!'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numeric_quizz1((5 * 3**3 - 2)**2/(4*3 +1))"
    ]
   },
   {
@@ -397,11 +429,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'You got the correct answer'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "numeric_quizz2(\"replace_me_with_True_or_False\")"
+    "numeric_quizz2(7**.5*(4/3)<(3**2*(3/4))/(1+2**2))"
    ]
   },
   {
@@ -435,10 +478,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import math"
+   ]
   },
   {
    "cell_type": "code",
@@ -503,9 +548,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([127], dtype=int8)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "np.array([-129,], dtype=np.int8)"
@@ -522,9 +578,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 25  -1  20]\n",
+      " [ 26   9  -7]\n",
+      " [ 45 -45   5]]\n",
+      "******************************************\n",
+      "[[ 32 -45  -5]\n",
+      " [ 37  17  10]\n",
+      " [ 36   0 -44]]\n",
+      "******************************************\n",
+      "[[-11 -18]\n",
+      " [-48  49]]\n"
+     ]
+    }
+   ],
    "source": [
     "A= np.random.randint(-50, 50, size=(3,3), dtype=np.int8)\n",
     "B= np.random.randint(-50, 50, size=(3,3), dtype=np.int16)\n",
@@ -547,9 +620,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 800   45 -100]\n",
+      " [ 962  153  -70]\n",
+      " [1620    0 -220]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(A*B)"
    ]
@@ -605,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
