--- a/python_crash_course.ipynb
+++ b/python_crash_course.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,11 +222,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data+Meaning=Information"
+     ]
+    }
+   ],
    "source": [
-    "print()"
+    "print(\"Data\",\"Meaning\", sep=\"+\",end=\"=Information\")"
    ]
   },
   {
@@ -380,11 +388,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "type(4.)"
+    "b=5\n",
+    "type(b)"
    ]
   },
   {
@@ -398,11 +418,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arg1 is a string\n",
+      "arg1 contains the correct value\n",
+      "arg2 is correctly a number\n",
+      "arg2 is correctly an integer\n"
+     ]
+    }
+   ],
    "source": [
-    "literal_variables1(arg1=\"replace_me1\", arg2=\"replace_me2\")\n"
+    "literal_variables1(arg1=\"327\", arg2=327)\n"
    ]
   },
   {
@@ -525,17 +556,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(float('5.4'))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'5.4'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(5.4)"
+   ]
   },
   {
    "cell_type": "code",
@@ -699,12 +756,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your function seems to be correct\n"
+     ]
+    }
+   ],
    "source": [
     "def quadratic(x,x0, a, b):\n",
-    "    y = None\n",
+    "    y = ((x - x0)**2) + (a*x) + b\n",
+    "    return y\n",
+    "\n",
     "print(test_quadratic(quadratic))"
    ]
   },
@@ -866,13 +933,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25.109607362071866"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def bmi(mass, height):\n",
-    "    pass\n",
-    "test_bmi(bmi)\n"
+    "    y = mass/(height**2)\n",
+    "    return y\n",
+    "\n",
+    "\n",
+    "m = 175*0.453592\n",
+    "h = 70*0.0254\n",
+    "\n",
+    "bmi(m,h)\n"
    ]
   },
   {
@@ -936,12 +1020,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Your function seems to be correct'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def pediatric_age(myage):\n",
-    "    pass\n",
+    "    if myage < 1:\n",
+    "        y = \"NEONATES\"\n",
+    "    elif 1 <= myage < 24:\n",
+    "        y = \"INFANTS\"\n",
+    "    elif 24 <= myage < 144:\n",
+    "        y = \"CHILDREN\"\n",
+    "    elif 144 <= myage < 192:\n",
+    "        y = \"ADOLESCENTS\"\n",
+    "    else:\n",
+    "        y = \"OTHER\"\n",
+    "    return y\n",
     "\n",
     "test_pediatric_age(pediatric_age)"
    ]
@@ -1041,10 +1146,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "e\n",
+      "i\n",
+      "o\n",
+      "u\n",
+      "a\n",
+      "e\n",
+      "i\n",
+      "o\n",
+      "u\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['In',\n",
+       " 'Out',\n",
+       " '_',\n",
+       " '_10',\n",
+       " '_11',\n",
+       " '_18',\n",
+       " '_19',\n",
+       " '_20',\n",
+       " '_22',\n",
+       " '_23',\n",
+       " '_24',\n",
+       " '_25',\n",
+       " '_26',\n",
+       " '_4',\n",
+       " '_5',\n",
+       " '_6',\n",
+       " '__',\n",
+       " '___',\n",
+       " '__builtin__',\n",
+       " '__builtins__',\n",
+       " '__doc__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " '_dh',\n",
+       " '_i',\n",
+       " '_i1',\n",
+       " '_i10',\n",
+       " '_i11',\n",
+       " '_i12',\n",
+       " '_i13',\n",
+       " '_i14',\n",
+       " '_i15',\n",
+       " '_i16',\n",
+       " '_i17',\n",
+       " '_i18',\n",
+       " '_i19',\n",
+       " '_i2',\n",
+       " '_i20',\n",
+       " '_i21',\n",
+       " '_i22',\n",
+       " '_i23',\n",
+       " '_i24',\n",
+       " '_i25',\n",
+       " '_i26',\n",
+       " '_i27',\n",
+       " '_i28',\n",
+       " '_i29',\n",
+       " '_i3',\n",
+       " '_i30',\n",
+       " '_i31',\n",
+       " '_i32',\n",
+       " '_i4',\n",
+       " '_i5',\n",
+       " '_i6',\n",
+       " '_i7',\n",
+       " '_i8',\n",
+       " '_i9',\n",
+       " '_ih',\n",
+       " '_ii',\n",
+       " '_iii',\n",
+       " '_oh',\n",
+       " 'assert_equal',\n",
+       " 'assert_true',\n",
+       " 'b',\n",
+       " 'bmi',\n",
+       " 'exit',\n",
+       " 'get_ipython',\n",
+       " 'h',\n",
+       " 'literal_variables1',\n",
+       " 'm',\n",
+       " 'numbers',\n",
+       " 'pediatric_age',\n",
+       " 'quadratic',\n",
+       " 'quit',\n",
+       " 'random',\n",
+       " 'str',\n",
+       " 'string',\n",
+       " 'strungout',\n",
+       " 'test_bmi',\n",
+       " 'test_nibabel',\n",
+       " 'test_pediatric_age',\n",
+       " 'test_ply',\n",
+       " 'test_quadratic',\n",
+       " 'test_random_integer',\n",
+       " 'x']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for x in ['a','e','i','o','u']:\n",
+    "    print(x)\n",
+    "    \n",
+    "for x in range(5):\n",
+    "    strungout = 'aeiou'\n",
+    "    print(strungout[x])\n",
+    "\n",
+    "dir()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1092,9 +1319,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " 'acos',\n",
+       " 'acosh',\n",
+       " 'asin',\n",
+       " 'asinh',\n",
+       " 'atan',\n",
+       " 'atan2',\n",
+       " 'atanh',\n",
+       " 'ceil',\n",
+       " 'copysign',\n",
+       " 'cos',\n",
+       " 'cosh',\n",
+       " 'degrees',\n",
+       " 'e',\n",
+       " 'erf',\n",
+       " 'erfc',\n",
+       " 'exp',\n",
+       " 'expm1',\n",
+       " 'fabs',\n",
+       " 'factorial',\n",
+       " 'floor',\n",
+       " 'fmod',\n",
+       " 'frexp',\n",
+       " 'fsum',\n",
+       " 'gamma',\n",
+       " 'gcd',\n",
+       " 'hypot',\n",
+       " 'inf',\n",
+       " 'isclose',\n",
+       " 'isfinite',\n",
+       " 'isinf',\n",
+       " 'isnan',\n",
+       " 'ldexp',\n",
+       " 'lgamma',\n",
+       " 'log',\n",
+       " 'log10',\n",
+       " 'log1p',\n",
+       " 'log2',\n",
+       " 'modf',\n",
+       " 'nan',\n",
+       " 'pi',\n",
+       " 'pow',\n",
+       " 'radians',\n",
+       " 'sin',\n",
+       " 'sinh',\n",
+       " 'sqrt',\n",
+       " 'tan',\n",
+       " 'tanh',\n",
+       " 'trunc']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import math\n",
     "dir(math)"
@@ -1109,11 +1400,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.141592653589793"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "math.sin(math.pi/2)"
+    "math.sin(math.pi/2)\n",
+    "\n",
+    "math.pi"
    ]
   },
   {
@@ -1129,13 +1433,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
+    "dir(random)\n",
+    "random.randrange?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Your function seems to be correct'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "def get_random_integer():\n",
-    "    pass\n",
-    "test_random_integer(get_random_integer)"
+    "    return random.randint(20,50)\n",
+    "test_random_integer(get_random_integer)\n",
+    "\n",
+    "def get_random_integer1():\n",
+    "    return random.randrange(20, 51)\n",
+    "test_random_integer(get_random_integer1)"
    ]
   },
   {
@@ -1166,18 +1496,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solving environment: ...working... failed\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "NotWritableError: The current user does not have write permissions to a required path.\n",
+      "  path: /home/gboogert/.conda/pkgs/urls.txt\n",
+      "  uid: 1079\n",
+      "  gid: 100\n",
+      "\n",
+      "If you feel that permissions on this path are set incorrectly, you can manually\n",
+      "change them by executing\n",
+      "\n",
+      "  $ sudo chown 1079:100 /home/gboogert/.conda/pkgs/urls.txt\n",
+      "\n",
+      "In general, it's not advisable to use 'sudo conda'.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "%%bash\n"
+    "%%bash\n",
+    "#pip install nibabel\n",
+    "conda install ply"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.5/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'It looks like nibabel is installed properly'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test_nibabel()"
    ]
@@ -1305,7 +1684,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
