--- a/text_and_strings.ipynb
+++ b/text_and_strings.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,9 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CHRONIC HEPATITIS C WITHOUT HEPATIC COMA\n",
+      "070.54\n"
+     ]
+    }
+   ],
    "source": [
     "description = 'CHRONIC HEPATITIS C WITHOUT HEPATIC COMA'\n",
     "code  = \"\"\"070.54\"\"\"\n",
@@ -86,9 +95,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Y\n",
+      "ᘪ\n",
+      "339\n",
+      "97\n"
+     ]
+    }
+   ],
    "source": [
     "print(chr(89))\n",
     "print(chr(5674))\n",
@@ -151,11 +171,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- is the correct value\n"
+     ]
+    }
+   ],
    "source": [
-    "string_index1_quiz(\"replace me with the character at mystring[19]\")"
+    "mystring = \"\"\"Termination of Swan-Ganz catheter within the proximal right main pulmonary.\"\"\"\n",
+    "string_index1_quiz(mystring[19])"
    ]
   },
   {
@@ -176,11 +205,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a is the correct value\n"
+     ]
+    }
+   ],
    "source": [
-    "string_index2_quiz(\"replace me with your guess of the result for mystring[-4]\")"
+    "string_index2_quiz(mystring[-4])"
    ]
   },
   {
@@ -200,9 +237,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CHRONIC HEPATITIS C WITHOUT HEPATIC COMA\n",
+      "C\n",
+      "I\n",
+      "CHRONIC HEPAT\n",
+      "ITIS C WITHOUT HEPATIC COMA\n",
+      "CRNCHPTTSCWTOTHPTCCM\n"
+     ]
+    }
+   ],
    "source": [
     "print(description)\n",
     "print(description[0])\n",
@@ -226,6 +276,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Swan-Ganz catheter'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#mystring.find(\"Swan-Ganz catheter\")\n",
+    "#len(\"Swan-Ganz catheter\")\n",
+    "mystring[mystring.find(\"Swan-Ganz catheter\"):mystring.find(\"Swan-Ganz catheter\")+len(\"Swan-Ganz catheter\")]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -239,27 +311,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "description.isupper()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function isalnum:\n",
+      "\n",
+      "isalnum(...) method of builtins.str instance\n",
+      "    S.isalnum() -> bool\n",
+      "    \n",
+      "    Return True if all characters in S are alphanumeric\n",
+      "    and there is at least one character in S, False otherwise.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(code.isalnum)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "code.isalnum()"
    ]
@@ -284,9 +393,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function split:\n",
+      "\n",
+      "split(...) method of builtins.str instance\n",
+      "    S.split(sep=None, maxsplit=-1) -> list of strings\n",
+      "    \n",
+      "    Return a list of the words in S, using sep as the\n",
+      "    delimiter string.  If maxsplit is given, at most maxsplit\n",
+      "    splits are done. If sep is not specified or is None, any\n",
+      "    whitespace string is a separator and empty strings are\n",
+      "    removed from the result.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "a = '1,2,3,4,5'\n",
     "help(a.split)"
@@ -294,9 +421,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1,2,3,4,5']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a.split()"
    ]
@@ -312,9 +450,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['resp', 'care', 'pt', 'received', 'on', 'psv', 'mode,', 'per', 'team', 'peep', 'placed', 'back', 'on', 'at', '5', 'cmH20.', 'initially', 'pt', 'requiring', 'ps', '12,', 'now', 'on', '8', 'for', 'progression', 'of', 'weaning.', 'tolerating', 'fair', 'with', 'rr', 'approx', '25-32', 'range.', \"mdi's\", 'given', 'q4h,', 'flovent', 'started', 'at', '8', 'p.', 'bid.', 'cuff', 'leak', 'seems', 'more', 'constant', 'today,', '?worse', 'with', 'peep', 'on,', 'cuff', 'pressure', 'kept', 'at', '30', 'cmH20', 'with', '10', \"cc's\", 'in', 'cuff,', 'to', 'seal', 'it', 'would', 'require', 'cuff', 'pressure', 'of', '45', 'cmh20.', 'IP', 'evaluated', 'and', 'chooses', 'not', 'to', 'replace', 'trach', 'at', 'this', 'time,', 'maintain', 'cuff', 'pressure', 'at', '30.', 'c/w', 'slow', 'wean,', 'progress', 'to', 'trach', 'mask', 'as', 'soon', 'as', 'possible.']\n"
+     ]
+    }
+   ],
    "source": [
     "note =\"\"\"resp care\n",
     "pt received on psv mode, per team peep placed back on at 5 cmH20. initially pt requiring ps 12, now on 8 for progression of weaning. tolerating fair with rr approx 25-32 range. mdi's given q4h, flovent started at 8 p. bid. cuff leak seems more constant today, ?worse with peep on, cuff pressure kept at 30 cmH20 with 10 cc's in cuff, to seal it would require cuff pressure of 45 cmh20. IP evaluated and chooses not to replace trach at this time, maintain cuff pressure at 30. c/w slow wean, progress to trach mask as soon as possible.\"\"\"\n",
@@ -333,9 +479,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '2', '3', '4', '5']\n",
+      "12345\n"
+     ]
+    }
+   ],
    "source": [
     "number_list = a.split(\",\")\n",
     "print(number_list)\n",
@@ -344,18 +499,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5\n"
+     ]
+    }
+   ],
    "source": [
     "print( ' '.join(number_list))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1,2,3,4,5\n",
+      "1, 2, 3, 4, 5\n",
+      "1this will look messy2this will look messy3this will look messy4this will look messy5\n"
+     ]
+    }
+   ],
    "source": [
     "print(','.join(number_list))\n",
     "\n",
@@ -376,9 +549,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PLANL: ADMIN K-EXCELATE. 3% NS WITH Q2H NA LEVELS. NEURO EXAM Q1H. MONITOR I/O, RESP STATUS. MRI TODAY AFTER QUESTIONAIRE COMPLETED. CALL H.O. WITH CHANGES.\n",
+      "------------------------------------------\n",
+      "planl: admin k-excelate. 3% ns with q2h na levels. neuro exam q1h. monitor i/o, resp status. mri today after questionaire completed. call h.o. with changes.\n",
+      "------------------------------------------\n",
+      "PLANL: Admin K-excelate. 3% NS with q2h Na levels. Neuro exam q1h. Monitor I/O, resp status. MRI today after questionaire completed. Call H.O. with changes.\n"
+     ]
+    }
+   ],
    "source": [
     "note2 = \"\"\"PLANL: Admin K-excelate. 3% NS with q2h Na levels. Neuro exam q1h. Monitor I/O, resp status. MRI today after questionaire completed. Call H.O. with changes.\"\"\"\n",
     "print(note2.upper())\n",
@@ -390,9 +575,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "planl: aDMIN k-EXCELATE. 3% ns WITH Q2H nA LEVELS. nEURO EXAM Q1H. mONITOR i/o, RESP STATUS. mri TODAY AFTER QUESTIONAIRE COMPLETED. cALL h.o. WITH CHANGES.\n",
+      "------------------------------------------\n",
+      "PLANL: Admin K-excelZte. 3% NS with q2h NZ levels. Neuro exZm q1h. Monitor I/O, resp stZtus. MRI todZy Zfter questionZire completed. CZll H.O. with chZnges.\n",
+      "------------------------------------------\n",
+      "PLANL:AdminK-excelate.3%NSwithq2hNalevels.Neuroexamq1h.MonitorI/O,respstatus.MRItodayafterquestionairecompleted.CallH.O.withchanges.\n"
+     ]
+    }
+   ],
    "source": [
     "print(note2.swapcase())\n",
     "print(\"-\"*42)\n",
@@ -441,7 +638,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
